# RiverORM

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: code_checks.yml  dependabot-auto-merge.yml  tests.yml
docs/: COMPETITORS.md  DEVELOPMENT.md  INSTALL.md  MISSION.md  USAGE.md
docs/adr/: 0001-future-annotations-lazy-forward-ref-resolution.md  0002-create-update-delete-write-api.md  0003-annotated-syntax-nullable-ddl-serialization.md  0004-only-defer-field-subset-loading.md  0005-unique-index-ddl.md  0006-transactions.md  template.md
riverorm/: __init__.py  config.py  constants.py  database.py  fields.py  models.py  queryset.py  utils.py
riverorm/db/: __init__.py  base.py  mysql.py  postgres.py  registry.py
riverorm/sql/: __init__.py  compiler.py  dialect.py  query.py
tests/: conftest.py  models.py  test_annotated_and_types.py  test_basics.py  test_db_connections.py  test_ddl.py  test_field_pk.py  test_field_subset.py  test_integration.py  test_load_related.py  test_orm_features.py  test_pydantic_compat.py  test_queryset.py  test_registry.py  test_relations.py  test_select_related.py  test_sql.py  test_table_name.py  test_table_name_edge_cases.py  test_write_operations.py
